--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "dependencies": {
-    "@hapi/hapi": "^21.3.9"
+    "@hapi/hapi": "^21.3.9",
+    "nanoid": "^3.3.7"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js",
+    "lint": "eslint . ",
+    "lint-fix": "eslint . --fix"
   },
   "name": "bookshelf-api",
   "description": "",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.0.2",
+    "@eslint/js": "^9.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "globals": "^15.0.0",
+    "nodemon": "^3.1.0"
+  },
   "author": "",
   "license": "ISC"
 }
